--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
   width: 1100px;
   background: #eeeeee;
   border: 2px solid #c3c3c3;
-  height: 600px;
+  height: 1000px;
   margin: 30px auto;
 }
 
@@ -116,3 +116,98 @@ span {
   padding: 0px;
   border-color: white; 
 }
+.display{
+  width: 650px;
+  background-color: white;
+  margin-left: 0;
+  height: 180px;
+  
+}
+.title{
+  font-size: 150%;
+  margin-left:0;
+  margin-top: 10px;
+}
+.avatar{
+  background-color: aqua;
+  width: 200px;
+  position: relative;
+  height: 65px;
+  
+
+}
+#inner-div{
+  width: 40px;
+  height: 50px;
+  background-color: lightseagreen;
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  margin-left: 15px;
+  
+}
+.avatar > p{
+  font-size: 15px;
+  margin-left: 55px;
+}
+#subscribe-btn {
+  margin-left: 70px;
+  background-color: red;
+  color: white;
+  padding: 5px;
+  font-size: 15px;
+  border: none;
+  margin-top: 7px;
+
+}
+hr {
+  background: transparent;
+}
+.addition {
+  text-decoration: none;
+  color: gray;
+  
+}
+#plus {
+  font-size: 42px;
+  position: relative;
+  top: -30px;
+  right: 0;
+}
+#addto-tag{
+  position: relative;
+  top: -95px;
+  right: 0;
+  margin-left: 20px;
+  margin-top: 5px;
+}
+#share-icon{
+  width: 20px;
+  position: relative;
+  top: -130px;
+  left: 90px;
+}
+#share-tag{
+  position: relative;
+  top: -168px;
+  left: 120px;
+  color: gray;
+
+}
+  .spanny {display:inline-block;
+ vertical-align:middle;
+ margin-right:6px;
+ background-image:url('https://archive.fo/Bss88/73e7cc59947d2ad243d63294411f83990629f7fc.png');
+ background-color: transparent; 
+ width:20px;
+ height:20px;
+ background-position: -154px -860px;
+  background-repeat: no-repeat;
+ } 
+ 
+
+  
