--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,3 @@
-* {
-  /* margin: 0; */
-  /* padding: 0; */
-  /* height: 0; */
-
-}
 body {
   background-color: #eeeeee;
 }
@@ -172,7 +166,7 @@ span {
 
 }
 hr {
-  background: transparent;
+  background-color: transparent;
   /* margin-top: 20px; */
   width: 97%;
 }
@@ -277,13 +271,31 @@ hr {
    margin-left: 10px;
  } 
 
-h5 {
-  padding-top: 8px;
+.show-more {
+  padding: 0;
   text-align: center;
-  font-size: 18px;
+  font-size: 11px;
   color: gray;
+  margin-top: -2px;
+}
+.line {
+  margin-top: 30px;
+}
+.like-dislike {
+  margin-left: 500px;
 }
 
-.line {
-  margin-top: 10px;
+#dislike-icon {
+  margin-left: 70px;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+  margin-top: -220px;
+  
+}
+#like-icon{
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+  margin-top: -220px;
 }
