--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
   width: 1100px;
   background: #eeeeee;
   border: 2px solid #c3c3c3;
-  height: 1000px;
+  height: 100%;
   margin: 30px auto;
 }
 
@@ -22,10 +22,11 @@ header{
   background: white;
   
 }
+
 input {
-  width: 60%;
-  height: 25px;
-  margin-left: 170px;
+  width: 50%;
+  padding: 6px;
+  margin-left: 200px;
   border-radius: 0;
   border: 1px solid #c3c3c3;
   background: white;
@@ -91,7 +92,6 @@ a {
 p {
   position: relative;
   top: 13px;
-  /* left: 15px; */
   font-size: 12px;
 }
 
@@ -118,6 +118,25 @@ p {
   height: 180px;
   
 }
+
+.group {
+  position: absolute;
+  width: 200px;
+  top: 33px;
+  right: 200px;
+}
+
+.icon {
+  width: 25px;
+  height: 20px;
+}
+
+li {
+  display: inline;
+  margin-left: 45px;
+
+}
+
 .title{
   font-size: 150%;
   margin-left:0;
@@ -214,13 +233,16 @@ hr {
   height:20px;
   background-position: -154px -860px;
   background-repeat: no-repeat;
-  margin-top: -400px;
+  margin-top: -395px;
   margin-left: 180px;
+  border-color: white;
  } 
 
- .morespan {
-   margin-top: 10px;
-   margin-left: -5px;
+ .moredot {
+   margin-top: -211px;
+   margin-left: 205px;
+   font: 12px cursive;
+   color: #7c7c80;
  }
  
  .sidebar {
@@ -252,9 +274,9 @@ hr {
  }
 
  #info {
+   width: 650px;
    background: white;
-   margin-top: -170px;
-   padding-bottom: 50px;
+   margin-top: 10px;
    padding-top: 5px;
  }
 
@@ -288,19 +310,16 @@ hr {
   margin-left: 500px;
 }
 
+#like-icon,
+#dislike-icon {
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+  margin-top: -17px;
+}
+
 #dislike-icon {
   margin-left: 70px;
-  width: 30px;
-  height: 20px;
-  cursor: pointer;
-  margin-top: -220px;
-  
-}
-#like-icon{
-  width: 30px;
-  height: 20px;
-  cursor: pointer;
-  margin-top: -220px;
 }
 
 .search-mirror {
@@ -319,4 +338,23 @@ hr {
   padding: 0px;
   padding-left: 10px;
   border-left: 1px solid gray;
+}
+
+.tool {
+  width: 55px;
+  height: 27px;
+  position: absolute;
+  top: 43px;
+  right: 380px;
+  border-left: 1px solid #7c7c80;
+  background: #eeeeee;
+  cursor: pointer;
+  padding-right: 10px;
+}
+
+.tool > img {
+  width: 18px;
+  height: 18px;
+  margin-left: 15px;
+  margin-top: 5px;
 }
